--- a/web/assets/css/screen.css
+++ b/web/assets/css/screen.css
@@ -4135,6 +4135,18 @@ table {
   outline: 2px dotted #e2e2e2;
 }
 
+.s-theme-secondary .s-editor a:not(.c-btn), .s-theme-secondary .s-editor a:not(.c-btn):visited {
+  color: #FFE100;
+}
+
+.s-theme-secondary .s-editor a:not(.c-btn):hover, .s-theme-secondary .s-editor a:not(.c-btn):focus {
+  color: #FFFFFF;
+}
+
+.s-theme-secondary .s-editor a:not(.c-btn):focus {
+  outline: 2px dotted #e2e2e2;
+}
+
 .s-editor .c-h2 a {
   font-weight: 700;
 }
